# PIPR-21L

./: .clang-format  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/command/: command.cpp  command.h
lib/debugger/: debugger.cpp  debugger.h
lib/memory/: memory.cpp  memory.h
lib/program/: program.cpp  program.h
lib/stack_machine/: operations.cpp  operations.h  stack_machine.cpp  stack_machine.h
lib/value/: value.cpp  value.h  value_visitor.cpp  value_visitor.h
programs/: example_program.sm
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  command_tests.cpp  debugger_tests.cpp  memory_tests.cpp  program_tests.cpp  sanity_tests.cpp  stack_machine_tests.cpp  value_tests.cpp
